--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/tolulope/OneDrive - University of Lagos/GitHub/Innoscripta/myvenv/bin/python3"
+    "python.pythonPath": "/Users/tolulope/OneDrive - University of Lagos/yummy backend/myvenv/bin/python3"
 }
