--- a/requirements.txt
+++ b/requirements.txt
@@ -13,18 +13,24 @@ django-heroku==0.3.1
 django-rest-knox==4.1.0
 django-rest-swagger==2.2.0
 djangorestframework==3.11.0
+drf-yasg==1.17.1
 gunicorn==20.0.4
 idna==2.9
+inflection==0.4.0
 itypes==1.2.0
 Jinja2==2.11.2
 Markdown==3.2.1
 MarkupSafe==1.1.1
 openapi-codec==1.3.2
+packaging==20.3
 psycopg2==2.8.5
 psycopg2-binary==2.8.5
 pycparser==2.20
+pyparsing==2.4.7
 pytz==2020.1
 requests==2.23.0
+ruamel.yaml==0.16.10
+ruamel.yaml.clib==0.2.0
 simplejson==3.17.0
 six==1.14.0
 sqlparse==0.3.1
